# desen-arama

./: .gitignore  LICENSE  README.md  hali-desen-arama-rapor.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_gui.py
.github/workflows/: build.yml
desenarama/: __init__.py  cli.py  config.py
desenarama/core/: __init__.py  colorhist.py  embedder.py  hasher.py  hashindex.py  imageio.py  models.py  osutil.py  paths.py  scanner.py  store.py  vindex.py
desenarama/gui/: __init__.py  app.py  main_window.py  settings_dialog.py  workers.py
desenarama/services/: __init__.py  engine.py  indexer.py  search.py  watcher.py
packaging/: desenarama.spec  installer.iss
tests/: bench.py  conftest.py  gui_smoke.py  make_dataset.py  test_hasher.py  test_hashindex.py  test_integration.py  test_store_scanner.py
