[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "desenarama"
version = "1.0.0"
description = "Halı deseni görsel benzerlik arama (yerel/ağ, çevrimdışı, Windows)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ahmetvural79" }]
dependencies = [
    "numpy>=2.0,<3",
    "pillow>=10.0",
    "opencv-python>=4.9",
    "scipy>=1.11",
    "faiss-cpu>=1.9",
    "onnxruntime>=1.20",
    "PySide6>=6.6",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyinstaller>=6.6"]

[project.scripts]
desenarama = "desenarama.cli:main"

[project.gui-scripts]
desenarama-gui = "desenarama.gui.app:main"

[tool.setuptools.packages.find]
include = ["desenarama*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
